# current-web-pipelines

./: .gitignore  .ocamlformat  CHANGES.md  README.md  current-web-pipelines.opam  current-web-pipelines.opam.template  dune  dune-project
example/: dune  example.ml
src/: dune  jobs.ml  jobs.mli  run_time.ml  state.ml  state.mli  task.ml  task.mli  web.ml  web.mli
test/: dune  test.ml
